feat: Added MiniPlaceholders support (#2)
Resolves #1

Signed-off-by: Ivan Pekov <ivan@mrivanplays.com>